--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     display: block;
     width: 100%;
+    align-items: center;
 }
 
 .NavigationItem a {
@@ -16,7 +17,30 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    background-color: #8F5C2C;
-    border-bottom: 4px solid #40A4C8;
-    color: white;
+    color: #40A4C8;
+}
+
+@media (min-width: 500px){
+    .NavigationItem {
+        margin: 0;
+        display: flex;
+        align-items: center;
+        width: auto;
+        height: 100%;
+    }
+    
+    .NavigationItem a {
+        color: white;
+        text-decoration: none;
+        width: 100%;
+    }
+    
+    .NavigationItem a:hover,
+    .NavigationItem a:active,
+    .NavigationItem a.active {
+        background-color: #8F5C2C;
+        border-bottom: 4px solid #40A4C8;
+        color: white;
+    }
+    
 }
