--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -3,7 +3,6 @@
     box-sizing: border-box;
     display: block;
     width: 100%;
-    align-items: center;
 }
 
 .NavigationItem a {
@@ -20,19 +19,20 @@
     color: #40A4C8;
 }
 
-@media (min-width: 500px){
+@media (min-width: 500px) {
     .NavigationItem {
         margin: 0;
         display: flex;
-        align-items: center;
-        width: auto;
         height: 100%;
+        width: auto;
+        align-items: center;
     }
     
     .NavigationItem a {
         color: white;
-        text-decoration: none;
-        width: 100%;
+        height: 100%;
+        padding: 16px 10px;
+        border-bottom: 4px solid transparent;
     }
     
     .NavigationItem a:hover,
@@ -42,5 +42,4 @@
         border-bottom: 4px solid #40A4C8;
         color: white;
     }
-    
 }
