--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -11,6 +11,8 @@
 
 .OrderButton {
     background-color: #DAD735;
+    width: 33%;
+    min-width: 180px;
     outline: none;
     cursor: pointer;
     border: 1px solid #966909;
@@ -18,6 +20,7 @@
     font-family: inherit;
     font-size: 1.2em;
     padding: 15px 30px;
+    margin-top: 15px;
     box-shadow: 2px 2px 2px #966909;
 }
 
